--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -31,3 +31,24 @@ body {
     text-wrap: balance;
   }
 }
+
+.active {
+  @apply bg-gray-300;
+}
+
+
+.bottom-tabs {
+  @apply fixed bottom-0 left-0 right-0 bg-white border-t border-gray-300;
+  display: flex;
+  justify-content: space-around;
+}
+
+.tab {
+  @apply text-gray-600;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  border-width: 1px;
+  padding: 10px;
+}
